--- a/Lesson1/Js-5.0-函数.html
+++ b/Lesson1/Js-5.0-函数.html
@@ -57,6 +57,31 @@
         cook("d", "sd")
 
     </script>
+
+    <!-- 韩式的return用法 -->
+
+    <script>
+        function getReutn() {
+
+            return 888;
+        }
+
+        console.log(getReutn());
+
+    </script>
+
+    <!-- 第二种函数表达式 -->
+
+    <script>
+
+        var fn = function () {
+            console.log("en?");
+        };
+
+        fn();
+
+
+    </script>
 </body>
 
 </html>
